updated name to just 'Go'

--- a/src/site/Go.plist
+++ b/src/site/Go.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Go Mobile</string>
+				<string>Go</string>
 			</dict>
 		</dict>
 	</array>
