--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp": "~3.5.6",
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.2.0",
-    "gulp-autoprefixer": "~0.0.6"
+    "gulp-autoprefixer": "~0.0.6",
+    "twilio": "~1.6.0"
   },
   "scripts": {
     "start": "gulp build && node server.js"
