--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gulp": "~3.5.6",
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.2.0",
-    "gulp-autoprefixer": "~0.0.6"
+    "gulp-autoprefixer": "~0.0.6",
+    "gulp-browserify": "0.5.0",
+    "lodash": "^2.4.1"
   },
   "scripts": {
     "start": "gulp build && node server.js"
