--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "gulp-browserify": "0.5.0",
     "lodash": "2.4.1",
     "twilio": "~1.6.0",
-    "browser-request": "0.3.2"
+    "browser-request": "0.3.2",
+    "uglify-js": "2.4.15",
+    "gulp-uglify": "^0.3.1"
   },
   "scripts": {
     "start": "gulp build && node server.js"
